# project-1

./: README.md  device-test-data.py  docker-compose.yml  graph  package-lock.json  package.json  performance.py  pyproject.toml  start.sh
adapters/: common_data_parser.py  http_adapter.py  kafka_producer_client.py  mqtt_adapter.py
backend/mongodb/: .env  main.py  test.py  test_bind.py  twin.py
backend/services/: dis_adapters.py
digital-twin-frontend/: package-lock.json  package.json
digital-twin-frontend/src/: App.css  App.jsx  index.css  main.jsx
digital-twin-platform/: package-lock.json  package.json
digital-twin-platform/src/: 11.jsx  (+5 more)
example/: send.py
frontend/: package-lock.json  package.json  vite.config.js
iot-data-adapter/: Dockerfile  docker-compose.yml  requirements.txt  test.py
kafka-influx-service/: .env  Dockerfile  config.py  docker-compose.yml  kafka.py  main.py  requirements.txt  test.py
mas/: .env  influx_handler.py
models/: model1.json
orchestrator/: kafka_utils.py
services/: .env  main.py  twin.py
twin-updater-service/: .env  Dockerfile  config.py  main.py  requirements.txt
workflow-orchestrator/: Dockerfile  api.py  change.sh  completer.py  config.py  docker-compose.yml  executor.py  function_registry.py  influx_handler.py  main.py  models.py  orchestrator.py  registry.py  requirements.txt  result.py  test_workflow.py  workflow_result.csv
workflow_api/: .env  config.py  docker-compose.yml  engine.py  influx_handler.py  main.py  model_loader.py  models.py  registry.py  requirements.txt  test.yml  test_influx.py  utils.py
(+33 files in other folders)
