[tool.poetry]
name = "digital twin"
version = "0.1.0"
description = ""
authors = ["QzQz-2000 <18822153516@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
python-multipart = "^0.0.20"
motor = "^3.7.1"
pandas = "^2.3.0"
pydantic-settings = "^2.10.1"
influxdb-client = "^1.49.0"
scikit-learn = "^1.7.0"
pyyaml = "^6.0.2"
neo4j = "^5.28.1"
aiokafka = "^0.12.0"
paho-mqtt = "^2.1.0"
python-json-logger = "^3.3.0"
requests = "^2.32.4"
redis = "^6.3.0"
kafka = "^1.3.5"
jsonschema = "^4.25.0"
aiohttp = "^3.12.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
